--- a/GestionApi/appsettings.json
+++ b/GestionApi/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+
+    "ConexionDB": "Server=FELMARPEREZ\\SQLEXPRESS; Database=GestionTaskDB;Trusted_Connection=True; TrustServerCertificate=True;"
+  }
+
+
 }
