--- a/GestionApi/appsettings.json
+++ b/GestionApi/appsettings.json
@@ -8,9 +8,13 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-
     "ConexionDB": "Server=FELMARPEREZ\\SQLEXPRESS; Database=GestionTaskDB;Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+
+  "JwtSettings": {
+    "SecretKey": "MiClaveSecretaSuperSeguraParaJWT2024!@#$%^&*()",
+    "Issuer": "GestionAPI",
+    "Audience": "GestionAPIUsers",
+    "ExpirationMinutes": 60
   }
-
-
 }
